# house-price-prediction

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  api.py  app.py  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: static-analysis.yml  streamlit-test.yml
house_price_prediction/: config.py  dataset.py  plots.py
house_price_prediction/modeling/: predict.py  schemas.py  train.py
models/: best_model.pkl  preprocessed_model.pkl
tests/: test_app.py
