[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "house_price_prediction"
version = "0.0.1"
description = "This project demonstrates how to properly clean data *(handle missing, handle encoding, handle numerical data)*, train a model *(using a regression model)*, and predict and serve it through API."
authors = [
  { name = "Eneru" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "ipython",
    "jupyterlab",
    "kaggle>=1.7.4.5",
    "lightgbm>=4.6.0",
    "matplotlib",
    "notebook",
    "numpy",
    "pandas",
    "pip",
    "pytest",
    "python-dotenv",
    "ruff",
    "scikit-learn",
    "xgboost>=3.0.2",
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["house_price_prediction"]
include = ["pyproject.toml", "house_price_prediction/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["house_price_prediction"]
force-sort-within-sections = true

